--- a/Toxicity2.ipynb
+++ b/Toxicity2.ipynb
@@ -1794,7 +1794,9 @@
     "============================================================================================\n",
     "\n",
     "\n",
-    "LSTMs are designed to handle sequential data, such as text, audio, or time-series data.\n",
+    "we use recurrent neural networkgenerates output that gets fed back into itself as input for future runs and for text classification task we use LSTM.\n",
+    "\n",
+    "LSTMs (Long short-term memory) are designed to handle sequential data, such as text, audio, or time-series data.\n",
     "\n",
     "The Bidirectional LSTM ensures that patterns are not missed regardless of whether they appear early or late in the sequence.\n",
     "\n",
